[package]
name = "zero-to-async"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
fugit = "0.3.9"
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8.0", features = ["portable-atomic"] }
microbit-v2 = "0.16.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

[features]
trigger-overflow = []
