[package]
name = "ch0_start"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
embedded-hal = "1.0.0"
fugit = "0.3.7"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", features = ["portable-atomic"] }
microbit-v2 = "0.15.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"

[features]
trigger-overflow = []
