[package]
name = "zero-to-async"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-nrf = { version = "0.9.0", features = [
    "nrf52833",
    "time-driver-rtc1",
    "gpiote",
] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-hal = "1.0.0"
fugit = "0.3.9"
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8.0", features = ["portable-atomic"] }
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

[features]
trigger-overflow = []
